# libsemsim2

./: .gitignore  CMakeLists.txt  design.mdj
dependencies/libsemsim-deps1/: CMakeLists.txt
dependencies/libsemsim-deps1/curl/: CMakeLists.txt
dependencies/libsemsim-deps1/googletest/googlemock/scripts/: fuse_gmock_files.py
dependencies/libsemsim-deps1/googletest/googletest/: README.md
dependencies/libsemsim-deps1/googletest/googletest/samples/: sample1_unittest.cc
dependencies/libsemsim-deps1/googletest/googletest/scripts/: fuse_gtest_files.py
dependencies/libsemsim-deps1/libiconv/: CMakeLists.txt
dependencies/libsemsim-deps1/libiconv/source/: configure
dependencies/libsemsim-deps1/libiconv/source/build-aux/: install-sh
dependencies/libsemsim-deps1/libiconv/source/libcharset/: configure
dependencies/libsemsim-deps1/libiconv/source/libcharset/build-aux/: install-sh
dependencies/libsemsim-deps1/libiconv/source/tests/: check-stateful  check-subst  check-translit  check-translitfailure
dependencies/libsemsim-deps1/prebuilt_binaries/: CMakeLists.txt
dependencies/libsemsim-deps1/winflexbison/: CMakeLists.txt
dependencies/libsemsim-deps1/yajl/: CMakeLists.txt
dependencies/libsemsim-deps1/yajl/reformatter/: CMakeLists.txt
dependencies/libsemsim-deps1/yajl/verify/: CMakeLists.txt
dependencies/libsemsim-deps1/zlib/: CMakeLists.txt
dependencies/libsemsim-deps2/: .gitignore  CMakeLists.txt
dependencies/libsemsim-deps2/libxml2/: CMakeLists.txt  parser.c  xmlIO.c  xmlschemas.c
dependencies/libsemsim-deps2/zipper/: CMakeLists.txt
dependencies/libsemsim-deps3/: CMakeLists.txt
dependencies/libsemsim-deps3/libsbml/: CMakeLists.txt  LICENSE.html  configure
dependencies/libsemsim-deps3/libsbml/config/: install-sh
dependencies/libsemsim-deps3/libsbml/docs/src/: doxygen-config-common.txt.cmake  doxygen-config-csharp.txt.cmake  doxygen-config-perl.txt.cmake
dependencies/libsemsim-deps3/libsbml/docs/src/filters/: doc-filter-csharp.py
dependencies/libsemsim-deps3/libsbml/docs/src/utilities/: compare-classes.py  generate-class-name-list.py  generate-cplusplus-class-names.py  generate-pkg-stylesheet.py
dependencies/libsemsim-deps3/libsbml/src/: CMakeLists.txt  l3v2extendedmath-package.cmake
dependencies/libsemsim-deps3/libsbml/src/bindings/perl/: list_get_fix.i
dependencies/libsemsim-deps3/libsbml/src/bindings/python/test/annotation/: TestAnnotationCopyAndClone.py  TestCVTerms.py  TestCVTerms_newSetters.py  TestDate_newSetters.py  TestL3ModelHistory.py  TestModelCreator_newSetters.py  TestModelHistory.py  TestModelHistory_newSetters.py  TestRDFAnnotation.py  TestRDFAnnotation2.py  TestRDFAnnotationC.py  TestValidation.py
dependencies/libsemsim-deps3/libsbml/src/bindings/python/test/math/: TestASTNode.py  TestL3FormulaParserC.py  TestMathReadFromFile1.py  TestMathReadFromFile2.py  TestReadMathML.py  TestValidASTNode.py  TestWriteMathML.py
dependencies/libsemsim-deps3/libsbml/src/bindings/python/test/sbml/: TestAlgebraicRule.py  TestAncestor.py  TestAssignmentRule.py  TestCompartment.py  TestCompartmentType.py  TestCompartmentType_newSetters.py  TestCompartmentVolumeRule.py  TestCompartment_newSetters.py  TestConsistencyChecks.py  TestConstraint.py  TestConstraint_newSetters.py  TestCopyAndClone.py  TestDelay.py  TestEvent.py  TestEventAssignment.py  TestEventAssignment_newSetters.py  TestEvent_newSetters.py  TestFunctionDefinition.py  TestFunctionDefinition_newSetters.py  TestGetMultipleObjects.py  TestInitialAssignment.py  TestKineticLaw.py  (+64 more)
dependencies/libsemsim-deps3/libsbml/src/bindings/r/: configure
dependencies/libsemsim-deps3/libsbml/src/bindings/swig/: swigdoc.py
dependencies/libsemsim-deps3/libsbml/src/sbml/common/: libsbml-config-common.h  libsbml-namespace.h  libsbml-package.h
dependencies/libsemsim-deps3/libsbml/src/sbml/test/: TestEventAssignment_newSetters.c  TestInitialAssignment_newSetters.c
dependencies/libsemsim-deps3/libsbml/src/sbml/units/: UnitKindList.cpp
dependencies/libsemsim-deps3/libsbml/src/sbml/xml/: XercesParser.cpp
dependencies/libsemsim-deps3/raptor/: CMakeLists.txt
dependencies/libsemsim-deps3/raptor/src/: CMakeLists.txt
dependencies/libsemsim-deps4/: CMakeLists.txt
dependencies/libsemsim-deps4/libCombine/: CMakeLists.txt
dependencies/libsemsim-deps4/libCombine/CMakeModules/: FindLIBSBML.cmake
dependencies/libsemsim-deps4/libCombine/dev/create-combine-wheels/: extract_archive.cmake
dependencies/libsemsim-deps4/libCombine/install/include/omex/common/: libcombine-config-common.h  libcombine-namespace.h  libcombine-version.h
dependencies/libsemsim-deps4/libCombine/install/lib/cmake/: libCombine-config-debug.cmake  libCombine-config.cmake  libCombine-static-config-debug.cmake  libCombine-static-config.cmake
dependencies/libsemsim-deps4/libCombine/src/combine/: knownformats.cpp
dependencies/libsemsim-deps4/raptor/: CMakeLists.txt  appveyor.yml
dependencies/libsemsim-deps4/raptor/utils/: CMakeLists.txt
dependencies/prebuilt_binaries/: CMakeLists.txt
semsim/: AnnotationBase.h  BiomodelsQualifiers.cpp  BiomodelsQualifiers.h  CMakeLists.txt  Component.h  CompositeAnnotation.h  DescriptorTerm.h  Entity.h  EntityBase.h  EntityDescriptor.h  Mediator.h  Model.h  Ontology.h  PhysicalProperty.h  Process.h  Relation.cpp  Relation.h  Resource.cpp  Resource.h  SemSim.cpp  SemSim.h  SemSimQualifiers.cpp  SemSimQualifiers.h  SingularAnnotation.cpp  SingularAnnotation.h  Sink.h  Source.h  Term.h  URI.h
semsim/omex/: OmexOutput.cpp  OmexOutput.h  SBMLOmex.cpp  SBMLOmex.h
semsim/ontologies/: CL.h  GO.h  OPB.h  SBO.h
semsim/query/: IdentityCondition.h  RasqalQuery.cpp  RasqalQuery.h  RasqalQueryResult.cpp  RasqalQueryResult.h  SelectQuery.h
semsim/rdf/: RDFReader.cpp  RDFReader.h
semsim/sbml/: Accessors.h  Annotations.h  MetaIDs.h  SBMLImporter.h  SBMLModel.h  Species.h
semsim/util/: Indent.h  UniquePtr.h
semsim2/: CMakeLists.txt  SBMLReader.cpp  SBMLReader.h
tests/: BIOMD0000000064.xml  CMakeLists.txt  FruitTests.cpp  ModelTests.cpp  RDFReaderTests.cpp  RDFReaderTests.h  test1.cpp
(+44 files in other folders)
